--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-# === Common Packages ===
+# Common Packages
 openai===0.28
 python-docx
 python-dotenv
 requests
 beautifulsoup4
 
-# === Google APIs ===
+# Google APIs
 google-api-python-client
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
 
-# === Audio Processing ===
+# Audio Processing
 pydub
